attached_assets/Pasted-D-Yakin-IoT-Skripsi-Skripsi-ino-In-function-void-tokenStatusCallback-TokenInfo-D-Yakin-IoT-S-1757087848555_1757087848557.txt
D:\Yakin IoT\Skripsi\Skripsi.ino: In function 'void tokenStatusCallback(TokenInfo)':
D:\Yakin IoT\Skripsi\Skripsi.ino:141:27: error: 'token_type_access_token' was not declared in this scope; did you mean 'token_type_refresh_token'?
  141 |   } else if (info.type == token_type_access_token) {
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
      |                           token_type_refresh_token
D:\Yakin IoT\Skripsi\Skripsi.ino:146:19: error: no matching function for call to 'HardwareSerial::println(MB_String)'
  146 |     Serial.println("Token Error: " + info.error.message);
In file included from C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Stream.h:25,
                 from C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Arduino.h:195,
                 from D:\Yakin IoT\Skripsi\Skripsi.ino:1:
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:97:10: note: candidate: 'size_t Print::println(const __FlashStringHelper*)'
   97 |   size_t println(const __FlashStringHelper *ifsh) {
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:97:45: note:   no known conversion for argument 1 from 'MB_String' to 'const __FlashStringHelper*'
   97 |   size_t println(const __FlashStringHelper *ifsh) {
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:100:10: note: candidate: 'size_t Print::println(const String&)'
  100 |   size_t println(const String &s);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:100:32: note:   no known conversion for argument 1 from 'MB_String' to 'const String&'
  100 |   size_t println(const String &s);
      |                  ~~~~~~~~~~~~~~^
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:101:10: note: candidate: 'size_t Print::println(const char*)'
  101 |   size_t println(const char[]);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:101:18: note:   no known conversion for argument 1 from 'MB_String' to 'const char*'
  101 |   size_t println(const char[]);
      |                  ^~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:102:10: note: candidate: 'size_t Print::println(char)'
  102 |   size_t println(char);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:102:18: note:   no known conversion for argument 1 from 'MB_String' to 'char'
  102 |   size_t println(char);
      |                  ^~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:103:10: note: candidate: 'size_t Print::println(unsigned char, int)'
  103 |   size_t println(unsigned char, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:103:18: note:   no known conversion for argument 1 from 'MB_String' to 'unsigned char'
  103 |   size_t println(unsigned char, int = DEC);
      |                  ^~~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:104:10: note: candidate: 'size_t Print::println(int, int)'
  104 |   size_t println(int, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:104:18: note:   no known conversion for argument 1 from 'MB_String' to 'int'
  104 |   size_t println(int, int = DEC);
      |                  ^~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:105:10: note: candidate: 'size_t Print::println(unsigned int, int)'
  105 |   size_t println(unsigned int, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:105:18: note:   no known conversion for argument 1 from 'MB_String' to 'unsigned int'
  105 |   size_t println(unsigned int, int = DEC);
      |                  ^~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:106:10: note: candidate: 'size_t Print::println(long int, int)'
  106 |   size_t println(long, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:106:18: note:   no known conversion for argument 1 from 'MB_String' to 'long int'
  106 |   size_t println(long, int = DEC);
      |                  ^~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:107:10: note: candidate: 'size_t Print::println(long unsigned int, int)'
  107 |   size_t println(unsigned long, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:107:18: note:   no known conversion for argument 1 from 'MB_String' to 'long unsigned int'
  107 |   size_t println(unsigned long, int = DEC);
      |                  ^~~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:108:10: note: candidate: 'size_t Print::println(long long int, int)'
  108 |   size_t println(long long, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:108:18: note:   no known conversion for argument 1 from 'MB_String' to 'long long int'
  108 |   size_t println(long long, int = DEC);
      |                  ^~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:109:10: note: candidate: 'size_t Print::println(long long unsigned int, int)'
  109 |   size_t println(unsigned long long, int = DEC);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:109:18: note:   no known conversion for argument 1 from 'MB_String' to 'long long unsigned int'
  109 |   size_t println(unsigned long long, int = DEC);
      |                  ^~~~~~~~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:110:10: note: candidate: 'size_t Print::println(double, int)'
  110 |   size_t println(double, int = 2);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:110:18: note:   no known conversion for argument 1 from 'MB_String' to 'double'
  110 |   size_t println(double, int = 2);
      |                  ^~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:111:10: note: candidate: 'size_t Print::println(const Printable&)'
  111 |   size_t println(const Printable &);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:111:18: note:   no known conversion for argument 1 from 'MB_String' to 'const Printable&'
  111 |   size_t println(const Printable &);
      |                  ^~~~~~~~~~~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:112:10: note: candidate: 'size_t Print::println(tm*, const char*)'
  112 |   size_t println(struct tm *timeinfo, const char *format = NULL);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:112:29: note:   no known conversion for argument 1 from 'MB_String' to 'tm*'
  112 |   size_t println(struct tm *timeinfo, const char *format = NULL);
      |                  ~~~~~~~~~~~^~~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:113:10: note: candidate: 'size_t Print::println()'
  113 |   size_t println(void);
      |          ^~~~~~~
C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\cores\esp32/Print.h:113:10: note:   candidate expects 0 arguments, 1 provided
Multiple libraries were found for "SD.h"
  Used: C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\SD
  Not used: C:\Users\ASUS\AppData\Local\Arduino15\libraries\SD
exit status 1

Compilation error: 'token_type_access_token' was not declared in this scope; did you mean 'token_type_refresh_token'?